            - org.softsmithy.lib.swing.filechooser.FileRootCellRenderer class added
            - org.softsmithy.lib.util.Localizable added
            - org.softsmithy.lib.util.Localizer added
            - org.softsmithy.lib.util.Localizables added
            - org.softsmithy.lib.util.Locales removed (replaced by Localizables)
            - generified classes
            - Javadocs added
            - Project setting changed
            - LocaleSelectionSample
            - FileRootSelectionSample
            - changed to JDK 1.5 -> please report regressions if you find any!
            - changed to NetBeans 6.1

v20070520:  - JButtonCustomizer completed
(Rev.: 337) - a text customizers sample added
            - text customizers tutorial section completed
            - org.softsmithy.lib.util.Strings: cut added
            - org.softsmithy.lib.io.Files: getPathNames added
            - org.softsmithy.lib.util.zip.ZipFiles: createEntryName added
            - org.softsmithy.lib.util.Lists class added
            - org.softsmithy.lib.util.EqualityVerifier interface added
            - org.softsmithy.lib.util.ComparatorEqualityVerifier class added
            - org.softsmithy.lib.util.ObjectEqualityVerifier class added
            - org.softsmithy.lib.swing.customizer.AbstractTextCustomizer: 
              String constructor removed
            - small sample updates
            - small documentation updates
            - Javadocs added

v20070304:  - org.softsmithy.lib.io.Files: delete recursivly added
(Rev.: 307) - org.softsmithy.lib.io.Streams: copy streams added
            - org.softsmithy.lib.util.zip.ZipFiles class added 
              (extract zip files)
            - Javadoc updates
            - Sample and tutorial trail about the number fields added
            - Syntax highlighting in the tutorial added
              (syntax Highlighter shipped with the tutorial is covered 
               by the LGPL)
            - small tutorial updates
